--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ bind r source-file ~/.tmux.conf
 
 # Set Terminal Title
 set -g set-titles on
-set -g set-titles-string '#(whoami)::#(hostname)::#(curl icanhazip.com;echo)'
+set -g set-titles-string '#(whoami)::#(hostname)::#(curl ipv4.icanhazip.com;echo)'
 
 
 # Status bar stuff
@@ -17,7 +17,7 @@ set -g status-fg white
 set -g status-interval 5
 set -g status-left-length 90
 set -g status-right-length 60
-set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]#(hostname)#[fg=white]::##[fg=yellow]#(curl icanhazip.com;echo)"
+set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]#(hostname)#[fg=white]::##[fg=yellow]#(curl ipv4.icanhazip.com;echo)"
 set -g status-justify left
 set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R' 
 
